// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MiqPolicySetStructuredList should render policy set info structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_policy_set_info"
>
  <FeatureToggle(StructuredListBody)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="0"
      onClick={[Function]}
      tabIndex={0}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "Description",
            "value": "bar",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
  </FeatureToggle(StructuredListBody)>
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqPolicySetStructuredList should render policy set notes structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_policy_set_notes"
>
  <FeatureToggle(StructuredListBody)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="0"
      onClick={[Function]}
      tabIndex={0}
      title=""
    >
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "value": Object {
              "input": "text_area",
              "readonly": true,
              "rows": 4,
              "text": "text area description",
            },
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
  </FeatureToggle(StructuredListBody)>
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqPolicySetStructuredList should render policy set structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_policy_set"
>
  <FeatureToggle(StructuredListBody)>
    <FeatureToggle(StructuredListRow)
      className="clickable"
      key="0"
      onClick={[Function]}
      tabIndex={0}
      title="View this Container Image Policy"
    >
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "cells": Array [
              Object {
                "bold": true,
                "icon": "pficon pficon-image",
                "value": "Container Image Compliance",
              },
              "OpenSCAP",
            ],
            "onclick": "DoNav('/miq_policy/show/1');",
            "title": "View this Container Image Policy",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className="clickable"
      key="1"
      onClick={[Function]}
      tabIndex={1}
      title="View this Container Image Policy"
    >
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "cells": Array [
              Object {
                "bold": true,
                "icon": "pficon pficon-image",
                "value": "Container Image Control",
              },
              "My scan",
            ],
            "onclick": "DoNav('/miq_policy/show/17');",
            "title": "View this Container Image Policy",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className="clickable"
      key="2"
      onClick={[Function]}
      tabIndex={2}
      title="View this Container Image Policy"
    >
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "cells": Array [
              Object {
                "bold": true,
                "icon": "pficon pficon-image",
                "value": "Container Image Control",
              },
              "Schedule compliance",
            ],
            "onclick": "DoNav('/miq_policy/show/3');",
            "title": "View this Container Image Policy",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className="clickable"
      key="3"
      onClick={[Function]}
      tabIndex={3}
      title="View this Container Node Policy"
    >
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "cells": Array [
              Object {
                "bold": true,
                "icon": "pficon pficon-container-node",
                "value": "Container Node Control",
              },
              "loic Node",
            ],
            "onclick": "DoNav('/miq_policy/show/18');",
            "title": "View this Container Node Policy",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className="clickable"
      key="4"
      onClick={[Function]}
      tabIndex={4}
      title="View this VM and Instance Policy"
    >
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "cells": Array [
              Object {
                "bold": true,
                "icon": "pficon pficon-virtual-machine",
                "value": "VM and Instance Control",
              },
              "OpenStack Application",
            ],
            "onclick": "DoNav('/miq_policy/show/16');",
            "title": "View this VM and Instance Policy",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
  </FeatureToggle(StructuredListBody)>
</FeatureToggle(StructuredListWrapper)>
`;
